# vkflame

./: .gitignore  CMakeLists.txt  INSTALL_OLLAMA_WINDOWS.md  README.md  shim_plan.md  test_gqa.py
added-files/: AGENTS.md  SETUP_AND_TEST.md  SHIM_PLAN.md  Test-Run-RCOM-Vulkan.md  device.cpp  diagnostic.md  dispatch.cpp  pipeline.cpp
kernels/: binop_f32.glsl  dequant_q4_0.glsl  dequant_q4_1.glsl  dequant_q4_k.glsl  dequant_q5_0.glsl  dequant_q5_k.glsl  dequant_q6_k.glsl  dequant_q8_0.glsl  dequant_q8_1.glsl  elementwise_f32.glsl  embedding.glsl  flash_attention.glsl  kvcache_update.glsl  linear_coop.glsl  linear_fp16.glsl  linear_fp16_fp32out.glsl  linear_int8.glsl  rms_norm.glsl  rms_norm_f32.glsl  rope_neox.glsl  scale_f32.glsl  softmax_online.glsl  topk.glsl  winograd_f23.glsl  winograd_filter_transform.glsl
python/vkflame/: __init__.py  install.py
runtime/: buffer.cpp  buffer.h  device.cpp  device.h  dispatch.cpp  dispatch.h  pipeline.cpp  pipeline.h
shim/: hip_runtime_shim.cpp  hipblas_shim.cpp  hipblaslt_shim.cpp  rocblas_shim.cpp
tests/: test_correctness.py  test_runtime.cpp
tools/: benchmark.py  embed_spirv.py  gpu_bench.py  quantise.py
torch_backend/: __init__.py  mode.py  ops.py
